--- a/index.html
+++ b/index.html
@@ -57,12 +57,15 @@
     </div>
     <script>
         const frasi = [
-            "La vita è breve, sorridi a chiunque tu incontri.",
-            "Non arrenderti mai, i grandi cambiamenti richiedono tempo.",
-            "Ogni giorno porta nuove possibilità.",
-            "La felicità è fatta di piccole cose.",
-            "Credi in te stesso, sempre.",
-            "Non esiste un momento perfetto, esiste il coraggio di iniziare."
+            "Partimmo col vento in poppa, la rotta fuggiva i limiti",
+            "Sotto le notti aveva corso tra i bui
+            Ora lui riconosceva la terra, lei non riconosceva lui",
+            "Il sottobosco mosso dove bastava un raggio solo
+Per trasformare il giallo e il rosso in porpora e oro",
+            "A volte provare a perdersi è una forma d'amore
+La forza del volo contro la gravità",
+            "Ma la city si alza all'alba, cambia l'acqua alle storie e le coglie",
+            "Vissero insieme trent'anni dopo un sorriso indeciso"
         ];
         function mostraFrase() {
             const randomIndex = Math.floor(Math.random() * frasi.length);
