--- a/index.html
+++ b/index.html
@@ -58,12 +58,9 @@
     <script>
         const frasi = [
             "Partimmo col vento in poppa, la rotta fuggiva i limiti",
-            "Sotto le notti aveva corso tra i bui
-            Ora lui riconosceva la terra, lei non riconosceva lui",
-            "Il sottobosco mosso dove bastava un raggio solo
-Per trasformare il giallo e il rosso in porpora e oro",
-            "A volte provare a perdersi è una forma d'amore
-La forza del volo contro la gravità",
+            "Sotto le notti aveva corso tra i bui Ora lui riconosceva la terra, lei non riconosceva lui",
+            "Il sottobosco mosso dove bastava un raggio solo Per trasformare il giallo e il rosso in porpora e oro",
+            "A volte provare a perdersi è una forma d'amoreLa forza del volo contro la gravità",
             "Ma la city si alza all'alba, cambia l'acqua alle storie e le coglie",
             "Vissero insieme trent'anni dopo un sorriso indeciso"
         ];
